<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.asangam.learnandroid2018.BeginnersFragment">


    <TextView
        android:id="@+id/beginnersHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/beginners_h1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beginners_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/beginners_d1"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginnersHeading"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp" />

    <TextView
        android:id="@+id/userInterface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/user_interface"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginners_desc"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btnInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toEndOf="@+id/userInterface"
        app:layout_constraintTop_toBottomOf="@+id/beginners_desc"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/btnInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toStartOf="@+id/btnInterface"
        app:layout_constraintTop_toBottomOf="@+id/btnInterface" />

    <TextView
        android:id="@+id/userInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_input"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInterface"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/multiScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/multi_screen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/networking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/networking"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiScreen"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/dataStorage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/data_storage"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networking"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/uxDesigner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/ux_designer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataStorage"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btnScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toStartOf="@+id/btnInput"
        app:layout_constraintTop_toBottomOf="@+id/btnInput" />

    <Button
        android:id="@+id/btnNetworking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toStartOf="@+id/btnScreen"
        app:layout_constraintTop_toBottomOf="@+id/btnScreen" />

    <Button
        android:id="@+id/btnStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toStartOf="@+id/btnNetworking"
        app:layout_constraintTop_toBottomOf="@+id/btnNetworking" />

    <Button
        android:id="@+id/btnDesigner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/take_me_there"
        app:layout_constraintStart_toStartOf="@+id/btnStorage"
        app:layout_constraintTop_toBottomOf="@+id/btnStorage" />


</android.support.constraint.ConstraintLayout>

</ScrollView>