<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.asangam.learnandroid2018.IntermediateFragment">

        <TextView
            android:id="@+id/intermediate_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingExtra="3sp"
            android:text="@string/intermediate_h1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/intermediate_d1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/intermediate_d1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intermediate_h1"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/developing_android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/developing_android"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intermediate_d1" />

        <Button
            android:id="@+id/btnDevelopingAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toEndOf="@+id/developing_android"
            app:layout_constraintTop_toBottomOf="@+id/intermediate_d1"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/firebase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/firebase"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developing_android"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toStartOf="@+id/btnDevelopingAndroid"
            app:layout_constraintTop_toBottomOf="@+id/btnDevelopingAndroid" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/location_services"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firebase"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toStartOf="@+id/btnFirebase"
            app:layout_constraintTop_toBottomOf="@+id/btnFirebase" />

        <TextView
            android:id="@+id/analytics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/analytics_services"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toStartOf="@+id/btnLocation"
            app:layout_constraintTop_toBottomOf="@+id/btnLocation" />

        <TextView
            android:id="@+id/monetization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_monetize"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analytics"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnMonetize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toStartOf="@+id/btnAnalytics"
            app:layout_constraintTop_toBottomOf="@+id/btnAnalytics" />

        <TextView
            android:id="@+id/maps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/maps"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monetization"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_me_there"
            app:layout_constraintStart_toStartOf="@+id/btnMonetize"
            app:layout_constraintTop_toBottomOf="@+id/btnMonetize" />







    </android.support.constraint.ConstraintLayout>
</ScrollView>